# ppx_deriving_graphql

./: .gitignore  README.md  dune  dune-project  ppx_deriving_graphql.opam
doc/: prelude.txt
src/: dune  ppx_deriving_graphql.ml
test/: gen_rules.ml
test/passing/: attrs.expected  attrs.ml  dune  dune.inc  simple.expected  simple.ml
