opam-version: "2.0"
maintainer:   "patrick@sirref.org"
authors:      ["Patrick Ferris"]
license:      "MIT"
homepage:     "https://github.com/carboncredits/ppx_deriving_graphql"
bug-reports:  "https://github.com/carboncredits/ppx_deriving_graphql/issues"
dev-repo:     "git+https://github.com/carboncredits/ppx_deriving_graphql.git"
build: [
 ["dune" "subst"] {dev}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune"               {>= "2.9.0"}
  "ppxlib"             {>= "0.27.0"}
  "graphql-lwt"
]
synopsis: "A ppx deriver for generating GraphQL schemas and arguments from OCaml types."