(executable
 (name pp)
 (modules pp)
 (libraries ppx_deriving_graphql ppxlib))

(include dune.inc)

(rule
 (targets dune.inc.gen)
 (deps
  (source_tree .))
 (action
  (with-stdout-to
   %{targets}
   (run ../gen_rules.exe))))

(rule
 (alias runtest)
 (package ppx_deriving_graphql)
 (action
  (diff dune.inc dune.inc.gen)))
